# cpp-future-exercise

./: CMakeLists.txt  README.md
include/: future.hpp  future_errorcodes.hpp  uniquefunction.hpp  utils.hpp
test/: CMakeLists.txt  futuretest.cpp  uniquefunctiontest.cpp
